Update donate text and translations, scrolling fix to lock.

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -48,13 +48,15 @@
 
     <div class="content-box">
       <h3>Donate</h3>
-      <p>Takhle část webu je věnována podpoře serveru Ordo Draconis.</p>
-      <p>V současnou chvíli se celkový donate připravuje.<br>
-      Nebude se jednat o p2w system. Celý systém je ještě ve výstavbě, chceme server, kde nebude 
-    donate hru samotnou ovlivňovat, zvyhodňovat. Zatím uvažujeme pouze o navýšení rate pro ViP hráče. Nic méně ještě jsme se 
-  nerozhodli a nemáme jasno, jestli bude možné např, zakoupit skiny na mounty anebo rvonou celé mounty, to že vidíte L2 ze sedla hru nijak neovlivní.<br>
-  Takže donate je zcela na Vás, budeme rádi za jakýkoliv příspěvek na chod serveru.<br>
-  S pozdravem Team Ordo</p>
+<p>Tato část webu je věnována podpoře serveru Ordo Draconis.</p>
+<p>
+V současné chvíli se celkový donate systém teprve připravuje.<br>
+Nebude se jednat o P2W systém. Celý systém je stále ve výstavbě – chceme server, kde donate nebude samotnou hru nijak ovlivňovat ani hráče znevýhodňovat či zvýhodňovat.<br>
+Zatím uvažujeme pouze o možném navýšení rate pro VIP hráče. Nicméně jsme se zatím nerozhodli a nemáme jasno v tom, zda bude možné například zakoupit skiny na mounty, nebo rovnou celé mounty. To, že uvidíte Lineage II ze sedla, hru nijak neovlivní.<br>
+Donate je tedy zcela na vás. Budeme rádi za jakýkoliv příspěvek na chod serveru.<br>
+S pozdravem<br>
+Team Ordo
+</p>
       <p>_________________</p>
     </div>
 
