--- a/pages/world.html
+++ b/pages/world.html
@@ -49,7 +49,7 @@
     <div class="content-box">
       <h3>Svět</h3>
       <p>Svět Adenu, města, zóny, bossové.</p>
-      <p>Tato část webu se teprve připravuje, čekáme na zpetnou vazbu co vlastne by hráci chtěli zde mít, např filtr lvl hráčů, pvp/pk bodů, počet adena atd.  </p>
+      <p>Tato část webu se teprve připravuje, čekáme na zpětnou vazbu co by vlastně hráci zde chtěli mít, např filtr lvl hráčů, pvp/pk bodů, počet adena atd.  </p>
     </div>
 
   </aside>
