--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <span class="dot"></span>
          Online
          <span class="divider">·</span>
-         <span class="players">214 hráčů</span>
+         <span class="players"></span>
           </div>
         </div>
       </div>
@@ -111,6 +111,30 @@ rateButtons.forEach(button => {
     }
   });
 });
+</script>
+<script>
+async function updateServerStatus() {
+  try {
+    const res = await fetch('/api/status.php');
+    const data = await res.json();
+
+    const dot = document.querySelector('.server-status .dot');
+    const players = document.querySelector('.server-status .players');
+
+    if (data.online) {
+      dot.style.background = '#2ecc71';
+      players.textContent = data.players + ' hráčů';
+    } else {
+      dot.style.background = '#e74c3c';
+      players.textContent = 'Offline';
+    }
+  } catch (e) {
+    console.error('Status error', e);
+  }
+}
+
+updateServerStatus();
+setInterval(updateServerStatus, 10000);
 </script>
 </body>
 </html>
