--- a/index-en.html
+++ b/index-en.html
@@ -19,10 +19,10 @@
     <div class="side-header">
     <div class="side-logo">Ordo Draconis</div>
       <div class="top-actions">
-        <div class="auth">
-          <a href="#" class="btn">Register</a>
-          <a href="#" class="btn">Login</a>
-            </div>
+       <div class="auth">
+    <a href="/auth/register-en.html" class="btn">Register</a>
+    <a href="/auth/login-en.html" class="btn">Login</a>
+</div>
           <div class="lang">
   <a href="index.html">CS</a> | 
   <a href="index-en.html" class="active">EN</a>
@@ -55,7 +55,7 @@
       <button class="rate-title">XP RATE</button>
       <div class="rate-detail">
         XP rate 3×<br>
-        After level 55: 2××<br>
+        After level 55: 2×<br>
         After level 74: 1×
       </div>
     </div>
