jen world zkouska jestli jene online hraci

--- a/pages/world.html
+++ b/pages/world.html
@@ -23,16 +23,18 @@
   <a href="/auth/register.html" class="btn">Register</a>
   <a href="/auth/login.html" class="btn">Login</a>
 </div>
-        <div class="lang">
+     <div class="lang">
   <a href="world.html" class="active">CS</a> |
   <a href="world-en.html">EN</a>
+</div>
 
-  <div class="server-status online">
+<div class="server-status online">
   <span class="dot"></span>
   Online
   <span class="divider">·</span>
   <span class="players"></span>
 </div>
+
 </div>
 
       </div>
