--- a/pages/world-en.html
+++ b/pages/world-en.html
@@ -23,16 +23,18 @@
   <a href="/auth/register-en.html" class="btn">Register</a>
   <a href="/auth/login-en.html" class="btn">Login</a>
 </div>
-        <div class="lang">
-  <a href="world.html">CS</a> |
-  <a href="world-en.html" class="active">EN</a>
+      <div class="lang">
+  <a href="world.html" class="active">CS</a> |
+  <a href="world-en.html">EN</a>
+</div>
 
-  <div class="server-status online">
+<div class="server-status online">
   <span class="dot"></span>
   Online
   <span class="divider">·</span>
   <span class="players"></span>
 </div>
+
 </div>
       </div>
     </div>
