--- a/pages/world-en.html
+++ b/pages/world-en.html
@@ -31,7 +31,7 @@
     <span class="dot"></span>
     Online
     <span class="divider">·</span>
-    <span class="players">214 players</span>
+    <span class="players"></span>
   </div>
 </div>
       </div>
