zmeny v JS login, prepisy Player a Hráčů

--- a/auth/login.html
+++ b/auth/login.html
@@ -80,6 +80,29 @@
     <footer class="main-footer">
         <p>© Ordo Draconis</p>
     </footer>
+<script>
+document.getElementById('loginForm').addEventListener('submit', async function (e) {
+  e.preventDefault();
 
+  const email = document.getElementById('email').value;
+  const password = document.getElementById('password').value;
+
+  const res = await fetch('/api/login.php', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json'
+    },
+    body: JSON.stringify({ email, password })
+  });
+
+  const data = await res.json();
+
+  if (data.status === 'ok' && data.redirect) {
+    window.location.href = data.redirect;
+  } else {
+    alert(data.error || 'Login failed');
+  }
+});
+</script>
 </body>
 </html>
