--- a/pages/server-en.html
+++ b/pages/server-en.html
@@ -207,7 +207,7 @@ async function updateServerStatus() {
 
     if (data.online) {
       dot.style.background = '#2ecc71';
-      players.textContent = data.players + ' hráčů';
+      players.textContent = data.players + ' Players';
     } else {
       dot.style.background = '#e74c3c';
       players.textContent = 'Offline';
