--- a/pages/server.html
+++ b/pages/server.html
@@ -183,7 +183,7 @@ async function updateServerStatus() {
 
     if (data.online) {
       dot.style.background = '#2ecc71';
-      players.textContent = data.players + ' hráčů';
+      players.textContent = data.players + ' Hráčů';
     } else {
       dot.style.background = '#e74c3c';
       players.textContent = 'Offline';
