Upravy maličkate, login, reg, tlačitka

--- a/auth/login-en.html
+++ b/auth/login-en.html
@@ -18,14 +18,13 @@
     </div>
 
     <div class="auth">
-        <a href="/auth/register-en.html" class="btn active">Register</a>
-        <a href="/auth/login-en.html" class="btn">Login</a>
+        <a href="/auth/register-en.html" class="btn">Registration</a>
+<a href="/auth/login-en.html" class="btn active">Login</a>
     </div>
-
-    <div class="lang">
-        <a href="/auth/register.html">CS</a>
-        <a href="/auth/register-en.html" class="active">EN</a>
-    </div>
+<div class="lang">
+  <a href="/auth/login.html">CS</a>
+  <a href="/auth/login-en.html" class="active">EN</a>
+</div>
 </header>
 
 
@@ -73,7 +72,7 @@
         <div class="auth-footer">
             <p>
                 Don’t have an account?
-                <a href="/auth/register.html">Create one</a>
+                <a href="/auth/register-en.html">Create one</a>
             </p>
         </div>
     </main>
