--- a/auth/login.html
+++ b/auth/login.html
@@ -23,9 +23,9 @@
     </div>
 
     <div class="lang">
-        <a href="/auth/register.html" class="active">CS</a>
-        <a href="/auth/register-en.html">EN</a>
-    </div>
+  <a href="/auth/login.html" class="active">CS</a>
+  <a href="/auth/login-en.html">EN</a>
+</div>
 </header>
 
     <!-- CONTENT -->
