--- a/auth/register-en.html
+++ b/auth/register-en.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="auth">
-        <a href="/auth/register-en.html" class="btn active">Register</a>
+        <a href="/auth/register-en.html" class="btn active">Registration</a>
         <a href="/auth/login-en.html" class="btn">Login</a>
     </div>
 
