--- a/pages/donate-en.html
+++ b/pages/donate-en.html
@@ -21,7 +21,7 @@
 
       <div class="top-actions">
         <div class="auth">
-  <a href="/auth/register-en.html" class="btn">Register</a>
+  <a href="/auth/register-en.html" class="btn">Registration</a>
   <a href="/auth/login-en.html" class="btn">Login</a>
 </div>
            <div class="lang">
