--- a/pages/server.html
+++ b/pages/server.html
@@ -21,8 +21,8 @@
 
       <div class="top-actions">
         <div class="auth">
-  <a href="/auth/register.html" class="btn">Register</a>
-  <a href="/auth/login.html" class="btn">Login</a>
+  <a href="/auth/register.html" class="btn">Registrace</a>
+  <a href="/auth/login.html" class="btn">Přihlášení</a>
 </div>
           <div class="lang">
   <a href="server.html" class="active">CS</a> |
