--- a/pages/world.html
+++ b/pages/world.html
@@ -20,8 +20,8 @@
     <div class="side-logo">Ordo Draconis</div>
       <div class="top-actions">
         <div class="auth">
-    <a href="/auth/register.html" class="btn">Register</a>
-    <a href="/auth/login.html" class="btn">Login</a>
+    <a href="/auth/register.html" class="btn">Registrace</a>
+    <a href="/auth/login.html" class="btn">Přihlášení</a>
 </div>
           <div class="lang">
           <a href="world.html" class="active">CS</a> |
