--- a/pages/world-en.html
+++ b/pages/world-en.html
@@ -20,7 +20,7 @@
       <div class="side-logo">Ordo Draconis</div>
       <div class="top-actions">
         <div class="auth">
-  <a href="/auth/register-en.html" class="btn">Register</a>
+  <a href="/auth/register-en.html" class="btn">Registration</a>
   <a href="/auth/login-en.html" class="btn">Login</a>
 </div>
         <div class="lang">
