--- a/auth/register-en.html
+++ b/auth/register-en.html
@@ -76,9 +76,7 @@
             </div>
 
             <!-- chybová hláška – zatím jen statická -->
-            <div class="form-error">
-                Passwords do not match.
-            </div>
+            <div class="form-error" id="registerError" style="display:none;"></div>
 
             <button type="submit" class="btn-primary">
                 Create account
@@ -102,8 +100,15 @@ document.addEventListener('DOMContentLoaded', () => {
   const form = document.getElementById('registerForm');
   const errorBox = document.getElementById('registerError');
 
+  if (!form || !errorBox) {
+    console.error('Register form or error box missing');
+    return;
+  }
+
   form.addEventListener('submit', async (e) => {
     e.preventDefault();
+
+    errorBox.style.display = 'none';
 
     const email = document.getElementById('email').value;
     const password = document.getElementById('password').value;
@@ -119,7 +124,7 @@ document.addEventListener('DOMContentLoaded', () => {
     if (data.status === 'ok') {
       window.location.href = '/auth/login.html';
     } else {
-      errorBox.textContent = data.error || 'Registration failed';
+      errorBox.textContent = data.error || 'Registrace selhala';
       errorBox.style.display = 'block';
     }
   });
