uprava profilu.. dfd

--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -27,36 +27,41 @@
   </div>
 
   <section id="accounts" class="profile-card">
-    <h2>Herní účty</h2>
+    <h2>Game accounts</h2>
     <p class="muted">Create and manage your Lineage II accounts.</p>
 
-    <a class="btn btn-primary" href="#" style="max-width:320px;">Vytvořit herní účet</a>
+    <a class="btn btn-primary" href="#" style="max-width:320px;">Create game account</a>
 
     <div class="mini-list">
-      <div class="mini-row"><strong>Účet:</strong> od_test1 <span class="tag">3 postavy</span></div>
-      <div class="mini-row"><strong>Účet:</strong> od_test2 <span class="tag">1 postava</span></div>
+      <div class="mini-row"><strong>Acc:</strong> od_test1 <span class="tag">3 characters</span></div>
+      <div class="mini-row"><strong>Acc:</strong> od_test2 <span class="tag">1 characters</span></div>
     </div>
   </section>
 
   <section id="vote" class="profile-card">
-    <h2>Hlasování</h2>
+    <h2>Server Vote</h2>
     <p class="muted">Vote links will appear here (4–5 sites).</p>
     <div class="link-list">
-      <a href="#" class="link-item">Hlasování #1</a>
-      <a href="#" class="link-item">Hlasování #2</a>
-      <a href="#" class="link-item">Hlasování #3</a>
-      <a href="#" class="link-item">Hlasování #4</a>
+      <a href="#" class="link-item">Vote server #1</a>
+      <a href="#" class="link-item">Vote server #2</a>
+      <a href="#" class="link-item">Vote server #3</a>
+      <a href="#" class="link-item">Vote server #4</a>
     </div>
   </section>
 
   <section id="donate" class="profile-card">
-    <h2>Podpora serveru</h2>
-    <p class="muted">Žádné pay-to-win. Zde budou informace k tokenům / platbě.</p>
+    <h2>Donate</h2>
+    <p class="muted">No pay-to-win. Information about tokens/payment will be provided here.</p>
     <div class="donate-box">
       <div><strong>IBAN:</strong> XXXX XXXX XXXX</div>
-      <div><strong>Zpráva pro příjemce:</strong> tvůj e-mail / účet</div>
+      <div><strong>Message for recipient:</strong> your e-mail / account</div>
     </div>
   </section>
+  <section id="support" class="profile-card">
+  <h2>Ticket / Bug report</h2>
+  <p class="muted">Something not working? Send us a ticket.</p>
+  <a class="btn btn-primary" href="/support/" style="max-width:320px;">Submit ticket</a>
+</section>
 </main>
 
 </body>
