--- a/profile/index.html
+++ b/profile/index.html
@@ -39,7 +39,7 @@
   </section>
 
   <section id="vote" class="profile-card">
-    <h2>Hlasování</h2>
+    <h2>Hlasování pro server</h2>
     <p class="muted">Odkazy na hlasování budou zde (4–5 webů).</p>
     <div class="link-list">
       <a href="#" class="link-item">Hlasování #1</a>
@@ -57,6 +57,11 @@
       <div><strong>Zpráva pro příjemce:</strong> tvůj e-mail / účet</div>
     </div>
   </section>
+  <section id="support" class="profile-card">
+  <h2>Ticket / Bug report</h2>
+  <p class="muted">Něco nefunguje? Pošli nám ticket.</p>
+  <a class="btn btn-primary" href="/support/" style="max-width:320px;">Odeslat ticket</a>
+</section>
 </main>
 
 </body>
