--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -12,7 +12,7 @@
 <header class="main-header">
   <div class="logo"><a href="/">Ordo Draconis</a></div>
   <div class="auth">
-    <a href="/profile/" class="btn active">Profile</a>
+    <a href="/profile/index-en.html" class="btn active">Profile</a>
     <a href="/api/logout.php" class="btn">Logout</a>
   </div>
 </header>
