--- a/profile/index.html
+++ b/profile/index.html
@@ -13,7 +13,7 @@
   <div class="logo"><a href="/">Ordo Draconis</a></div>
   <div class="auth">
     <a href="/profile/index.html" class="btn active">Profile</a>
-    <a href="/api/logout.php" class="btn">Odhlásit se</a>
+    <a href="/api/logout.php?lang=cs" class="btn">Odhlásit se</a>
   </div>
 </header>
 
