--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -25,7 +25,7 @@
     <a class="tab" href="#vote">Vote</a>
     <a class="tab" href="#donate">Donate</a>
   </div>
-
+  <div class="profile-grid">
   <section id="accounts" class="profile-card">
     <h2>Game accounts</h2>
     <p class="muted">Create and manage your Lineage II accounts.</p>
@@ -62,6 +62,7 @@
   <p class="muted">Something not working? Send us a ticket.</p>
   <a class="btn btn-primary" href="/support/" style="max-width:320px;">Submit ticket</a>
 </section>
+</div>
 </main>
 
 </body>
