--- a/profile/index.html
+++ b/profile/index.html
@@ -25,7 +25,7 @@
     <a class="tab" href="#vote">Hlasování</a>
     <a class="tab" href="#donate">Podpora</a>
   </div>
-
+    <div class="profile-grid">
   <section id="accounts" class="profile-card">
     <h2>Herní účty</h2>
     <p class="muted">Zde si vytvoříš a spravuješ své účty pro Lineage II.</p>
@@ -62,6 +62,7 @@
   <p class="muted">Něco nefunguje? Pošli nám ticket.</p>
   <a class="btn btn-primary" href="/support/" style="max-width:320px;">Odeslat ticket</a>
 </section>
+  </div>
 </main>
 
 </body>
